--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     ports:
       - "3000:3000"
     environment:
-      MONGO_DB_USERNAME: ${MONOGODB_ADMIN}
-      MONGO_DB_PWD: ${MONGODB_PASSWORD}
+      MONGO_DB_USERNAME: admin
+      MONGO_DB_PWD: pass
     networks:
       - mongo_net_comp
 
@@ -14,8 +14,8 @@ services:
     ports:
       - 27017:27017
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=${MONOGODB_ADMIN}
-      - MONGO_INITDB_ROOT_PASSWORD=${MONGODB_PASSWORD}
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=pass
     networks:
       - mongo_net_comp
 
@@ -25,8 +25,8 @@ services:
     ports:
       - 8081:8081
     environment:
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=${MONOGODB_ADMIN}
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=${MONGODB_PASSWORD}
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=pass
       - ME_CONFIG_MONGODB_SERVER=mongodb
     networks:
       - mongo_net_comp
